@@ -1880,6 +1880,17 @@
     pages= {969--976}
     }
 
+@article{Harrell96,
+  title={Multivariable prognostic models: issues in developing models, 
+    evaluating assumptions and adequacy, and measuring and reducing errors},
+  author={Harrell, Frank E and Lee, Kerry L and Mark, Daniel B},
+  journal=statmed,
+  volume={15},
+  pages={361--387},
+  year={1996},
+  publisher={JOHN WILEY \& SONS LTD}
+}
+
 @article{Henderson99,
     author= {R. Henderson and P. Oman},
     year= {1999},
@@ -1933,6 +1944,13 @@
     journal=biom, volume={48},
     pages= {795--806}
     }
+
+@article{Korn90,
+    author= {Edward L. Korn and Richard Simon},
+    title = {Measures of explained variation for survival data},
+    journal = statmed,  year=1990,
+    volume={8}, pages={487--503}
+}
 
 @article{Kyle93,  
     author= {R. A. Kyle},
@@ -2029,6 +2047,23 @@
     pages= {313--319}
     }
 
+@article{Peto72,
+    author= {R. Peto and J. Peto},
+    title = {Asymptotically efficient rank invariant test procedures (with
+               discussion)},
+    journal= jrssa, year=1972, volume={135}, number={2}, pages={185--206}
+    }
+
+@article{Prentice79,
+  title={A qualitative discrepancy between censored data rank tests},
+  author={Prentice, Ross L and Marek, P},
+  journal={Biometrics},
+  pages={861--867},
+  year={1979},
+  volume={35},
+  number={4}
+}
+
 @techreport{Pugh92, 
     author= {M. Pugh and J. Robbins and S. Lipsitz and D. Harrington},
     year= {1992},
@@ -2048,6 +2083,14 @@
     journal=biom,
     volume={56}, pages={1016--1022}
     }	
+
+@article{Schemper09,
+    author={Schemper, M. and  Wakounig, S. and Heinze, G.},
+    title={The estimation of average hazard ratios by weighted 
+        {C}ox regression},
+    year=2009,
+    journal=statmed, volume={28}, number={19}, pages={2473--2489}
+    }
 
 @booklet{Seer81,
     key = {Surveillance},
@@ -2091,6 +2134,15 @@
     pages= {93--108}
     }
 
+@article{Uno11,
+    author={H. Uno and T. Cai and M. J. Pencina and R. B D'Agnostino 
+          and L. J. Wei},
+    title={On the {C}-statistics for evaluating overall adequacy of risk 
+        prediction procedures with censored survival data},
+    year=2011,
+    journal=statmed, volume=30, number=10, pages={1105--1117}
+ }
+
 @article{Verweij94,
     author= {P. J .M. Verweij and Van Houwlingen, H. C.},
     year= {1994},
@@ -2108,9 +2160,19 @@
     pages = {256--262}
 }
 
+@techreport{Watson15,
+    author = {Terry Therneau and David Watson},
+    title = {The concordance statistic and the {C}ox model},
+    number= 85,
+    type = {Technical Report},
+    institution= {Divison of Biostatistics, Mayo Clinic},
+    year = 2015}
+}
+
 @article{Wei90,
     author= {L. J. Wei and Z. Ying and D. Y. Lin},
     year= {1990},
+
     title= {Linear regression analysis of censored survival data based on
 		 rank tests},
     journal= biok, volume={77},
