@@ -3,7 +3,10 @@
 \section{Changes in version 2.42-7}{
   \itemize{
     \item Add arguments to survfit: survfit.matrix did not have
-    start.time, and survfitCI did not have p0.  Now both of them have both.
+    start.time, and survfitCI did not have p0.  Now both of them have
+    both.
+    \item Add the concordance function, an upgrade of the older
+    survConcordance funtion.  The latter will be depricated.
 }}
 
 \section{Changes in version 2.42-6}{
